fix horizontal scroll issue padding chevron

--- a/frontend/src/styles/ecole&college/Pedagogie/_pedagogie.scss
+++ b/frontend/src/styles/ecole&college/Pedagogie/_pedagogie.scss
@@ -31,7 +31,7 @@
 .materials {
   .materials-container {
     display: flex;
-    gap: 30px;
+    gap: 60px;
     p {
       width: 50%;
     }
