--- a/frontend/src/styles/ecole&college/Presentation/_presentation.scss
+++ b/frontend/src/styles/ecole&college/Presentation/_presentation.scss
@@ -96,7 +96,7 @@
   }
   .local-container {
     display: flex;
-    gap: 30px;
+    gap: 60px;
     p {
       width: 50%;
     }
