--- a/frontend/src/styles/shared/_avisCards.scss
+++ b/frontend/src/styles/shared/_avisCards.scss
@@ -69,7 +69,7 @@
   // padding: 20px;
   position: relative;
   .slick-list {
-    padding: 50px 50px 50px 0;
+    padding: 10px 10px 10px 0;
   }
 }
 
