--- a/frontend/src/styles/shared/_navigationGlobal.scss
+++ b/frontend/src/styles/shared/_navigationGlobal.scss
@@ -10,6 +10,7 @@ nav {
   background: $white;
   transition: transform 0.3s ease;
   z-index: 1;
+  top: 0;
   &.hide {
     transform: translateY(-100%);
   }
